syntax = "proto3";

// Go i√ßin paket yolu
option go_package = "./proto";

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string user_id = 1;
  double amount = 2;
  string payment_method = 3;
  string card_number = 4;
  string card_expiry = 5;
}

message PaymentResponse {
  bool success = 1;
  string message = 2;
}

